--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
             <li class="list home-btn"><a href="./home.html">HOME</a></li>
             <li class="list store-btn"><a href="./index.html">STORE</a></li>
             <li class="list about-btn"><a href="./about.html">ABOUT</a></li>
-           
+            <li class="list about-btn"><a href="./orders.html">ORDERS</a></li>
         </ul>
         <hr>
         <h2>THE GENERICS</h2>
